--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <button type="button" class="hero-button">Order Service</button>
           </section>
           <section class="advantages section">
-            <h2>Advantages</h2>
+            <h2 class="visually-hidden">Advantages</h2>
             <ul class="advantages-cards-list">
               <li>
                 <h3 class="advantages-card-title">Strategy</h3>
@@ -155,8 +155,10 @@
                   width="360"
                   height="300"
                 />
-                <h3 class="portfolio-card-title">Banking App</h3>
-                <p class="portfolio-card-test">App</p>
+                <div class="portfolio-cards-text">
+                  <h3 class="portfolio-card-title">Banking App</h3>
+                  <p>App</p>
+                </div>
               </li>
               <li class="porfolio-card">
                 <img
@@ -166,8 +168,10 @@
                   width="360"
                   height="300"
                 />
-                <h3 class="portfolio-card-title">Cashless Payment</h3>
-                <p class="portfolio-card-test">Marketing</p>
+                <div class="portfolio-cards-text">
+                  <h3 class="portfolio-card-title">Cashless Payment</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
               <li class="porfolio-card">
                 <img
@@ -177,8 +181,10 @@
                   width="360"
                   height="300"
                 />
-                <h3 class="portfolio-card-title">Meditation App</h3>
-                <p class="portfolio-card-test">App</p>
+                <div class="portfolio-cards-text">
+                  <h3 class="portfolio-card-title">Meditation App</h3>
+                  <p>App</p>
+                </div>
               </li>
               <li class="porfolio-card">
                 <img
@@ -188,8 +194,10 @@
                   width="360"
                   height="300"
                 />
-                <h3 class="portfolio-card-title">Taxi Service</h3>
-                <p class="portfolio-card-test">Marketing</p>
+                <div class="portfolio-cards-text">
+                  <h3 class="portfolio-card-title">Taxi Service</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
               <li class="porfolio-card">
                 <img
@@ -199,8 +207,10 @@
                   width="360"
                   height="300"
                 />
-                <h3 class="portfolio-card-title">Screen Illustrations</h3>
-                <p class="portfolio-card-test">Design</p>
+                <div class="portfolio-cards-text">
+                  <h3 class="portfolio-card-title">Screen Illustrations</h3>
+                  <p>Design</p>
+                </div>
               </li>
               <li class="porfolio-card">
                 <img
@@ -210,8 +220,10 @@
                   width="360"
                   height="300"
                 />
-                <h3 class="portfolio-card-title">Online Courses</h3>
-                <p class="portfolio-card-test">Marketing</p>
+                <div class="portfolio-cards-text">
+                  <h3 class="portfolio-card-title">Online Courses</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
             </ul>
           </section>
