--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
       <main>
         <div class="container">
-          <section class="section hero">
+          <section class="section">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-button">Order Service</button>
           </section>
-          <section class="advantages section">
+          <section class="section">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="advantages-cards-list">
               <li>
@@ -95,7 +95,7 @@
               </li>
             </ul>
           </section>
-          <section class="team section">
+          <section class="section">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-cards-list">
               <li class="team-card">
@@ -144,7 +144,7 @@
               </li>
             </ul>
           </section>
-          <section class="portfolio section">
+          <section class="section">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-cards-list">
               <li class="porfolio-card">
