--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <main>
         <div class="container">
-          <section class="section">
+          <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-button">Order Service</button>
           </section>
