--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
       </header>
 
       <main>
-        <div class="container">
-          <section class="hero">
+        <section class="hero">
+          <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-button">Order Service</button>
-          </section>
-          <section class="section">
+          </div>
+        </section>
+        <section class="advantages">
+          <div class="container">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="advantages-cards-list">
               <li>
@@ -94,8 +96,10 @@
                 </p>
               </li>
             </ul>
-          </section>
-          <section class="section">
+          </div>
+        </section>
+        <section class="team">
+          <div class="container">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-cards-list">
               <li class="team-card">
@@ -143,8 +147,10 @@
                 <p class="team-card-text">UI Designer</p>
               </li>
             </ul>
-          </section>
-          <section class="section">
+          </div>
+        </section>
+        <section class="portfolio">
+          <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-cards-list">
               <li class="porfolio-card">
@@ -226,8 +232,8 @@
                 </div>
               </li>
             </ul>
-          </section>
-        </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
