modified:   css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
           <div class="container">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="advantages-cards-list">
-              <li>
+              <li class="advantages-cards-item">
                 <h3 class="advantages-card-title">Strategy</h3>
                 <p class="advantages-card-text">
                   Our goal is to identify the business problem to walk away with
                   the perfect and creative solution.
                 </p>
               </li>
-              <li>
+              <li class="advantages-cards-item">
                 <h3 class="advantages-card-title">Punctuality</h3>
                 <p class="advantages-card-text">
                   Bring the key message to the brand's audience for the best
                   price within the shortest possible time.
                 </p>
               </li>
-              <li>
+              <li class="advantages-cards-item">
                 <h3 class="advantages-card-title">Diligence</h3>
                 <p class="advantages-card-text">
                   Research and confirm brands that present the strongest digital
                   growth opportunities and minimize risk.
                 </p>
               </li>
-              <li>
+              <li class="advantages-cards-item">
                 <h3 class="advantages-card-title">Technologies</h3>
                 <p class="advantages-card-text">
                   Design practice focused on digital experiences. We bring forth
@@ -110,8 +110,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-card-name">Mark Guerrero</h3>
-                <p class="team-card-text">Product Designer</p>
+                <div class="team-card-text">
+                  <h3 class="team-card-name">Mark Guerrero</h3>
+                  <p class="team-card-job">Product Designer</p>
+                </div>
               </li>
               <li class="team-card">
                 <img
@@ -121,8 +123,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-card-name">Tom Ford</h3>
-                <p class="team-card-text">Frontend Developer</p>
+                <div class="team-card-text">
+                  <h3 class="team-card-name">Tom Ford</h3>
+                  <p class="team-card-job">Frontend Developer</p>
+                </div>
               </li>
               <li class="team-card">
                 <img
@@ -132,8 +136,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-card-name">Camila Garcia</h3>
-                <p class="team-card-text">Marketing</p>
+                <div class="team-card-text">
+                  <h3 class="team-card-name">Camila Garcia</h3>
+                  <p class="team-card-job">Marketing</p>
+                </div>
               </li>
               <li class="team-card">
                 <img
@@ -143,8 +149,10 @@
                   width="264"
                   height="260"
                 />
-                <h3 class="team-card-name">Daniel Wilson</h3>
-                <p class="team-card-text">UI Designer</p>
+                <div class="team-card-text">
+                  <h3 class="team-card-name">Daniel Wilson</h3>
+                  <p class="team-card-job">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
